--- a/WebShop.WebUI/WebShop.WebUI.csproj
+++ b/WebShop.WebUI/WebShop.WebUI.csproj
@@ -206,9 +206,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202101261427452_AddMembershipTypeToDataBase.cs" />
-    <Compile Include="Migrations\202101261427452_AddMembershipTypeToDataBase.designer.cs">
-      <DependentUpon>202101261427452_AddMembershipTypeToDataBase.cs</DependentUpon>
+    <Compile Include="Migrations\202101261909391_AddMembershipTypeToDatabase.cs" />
+    <Compile Include="Migrations\202101261909391_AddMembershipTypeToDatabase.designer.cs">
+      <DependentUpon>202101261909391_AddMembershipTypeToDatabase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202101261910358_SeedMembershipTypeDatabase.cs" />
+    <Compile Include="Migrations\202101261910358_SeedMembershipTypeDatabase.designer.cs">
+      <DependentUpon>202101261910358_SeedMembershipTypeDatabase.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -217,6 +221,7 @@
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Utility\SD.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -497,8 +502,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202101261427452_AddMembershipTypeToDataBase.resx">
-      <DependentUpon>202101261427452_AddMembershipTypeToDataBase.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202101261909391_AddMembershipTypeToDatabase.resx">
+      <DependentUpon>202101261909391_AddMembershipTypeToDatabase.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101261910358_SeedMembershipTypeDatabase.resx">
+      <DependentUpon>202101261910358_SeedMembershipTypeDatabase.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
