--- a/WebShop.DataAccess.SQL/WebShop.DataAccess.SQL.csproj
+++ b/WebShop.DataAccess.SQL/WebShop.DataAccess.SQL.csproj
@@ -40,6 +40,12 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Owin, Version=4.1.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Owin.4.1.1\lib\net45\Microsoft.Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
+      <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -52,18 +58,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Datacontext.cs" />
-    <Compile Include="Migrations\202101201012218_Initial.cs" />
-    <Compile Include="Migrations\202101201012218_Initial.designer.cs">
-      <DependentUpon>202101201012218_Initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202101201022019_Initial1.cs" />
-    <Compile Include="Migrations\202101201022019_Initial1.designer.cs">
-      <DependentUpon>202101201022019_Initial1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202101211822452_Initial3.cs" />
-    <Compile Include="Migrations\202101211822452_Initial3.designer.cs">
-      <DependentUpon>202101211822452_Initial3.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\202101221148162_Basket.cs" />
     <Compile Include="Migrations\202101221148162_Basket.designer.cs">
       <DependentUpon>202101221148162_Basket.cs</DependentUpon>
@@ -80,6 +74,10 @@
     <Compile Include="Migrations\202101242136303_Shipping.designer.cs">
       <DependentUpon>202101242136303_Shipping.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101270621174_AddCustomer.cs" />
+    <Compile Include="Migrations\202101270621174_AddCustomer.designer.cs">
+      <DependentUpon>202101270621174_AddCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -95,15 +93,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202101201012218_Initial.resx">
-      <DependentUpon>202101201012218_Initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202101201022019_Initial1.resx">
-      <DependentUpon>202101201022019_Initial1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202101211822452_Initial3.resx">
-      <DependentUpon>202101211822452_Initial3.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202101221148162_Basket.resx">
       <DependentUpon>202101221148162_Basket.cs</DependentUpon>
     </EmbeddedResource>
@@ -115,6 +104,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202101242136303_Shipping.resx">
       <DependentUpon>202101242136303_Shipping.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101270621174_AddCustomer.resx">
+      <DependentUpon>202101270621174_AddCustomer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
