--- a/WebShop.WebUI/Web.config
+++ b/WebShop.WebUI/Web.config
@@ -102,12 +102,8 @@
 
 	<system.net>
 		<mailSettings>
-			<smtp from="you@outlook.com">
-				<network host="smtp-mail.outlook.com"
-						 port="587"
-						 userName="you@outlook.com"
-						 password="password"
-						 enableSsl="true" />
+			<smtp deliveryMethod="Network" from="noreply@ahoora.se">
+				<network defaultCredentials="false" host="send.one.com" port="587" userName="noreply@ahoora.se" password="AwSeDr@!220"/>
 			</smtp>
 		</mailSettings>
 	</system.net>
